--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+.env
+
+.DS_Store
+/node_modules/
+/src/node_modules/@sapper/
+yarn-error.log
+/cypress/screenshots/
+/__sapper__/
+
 # Logs
 logs
 *.log
@@ -53,9 +62,3 @@ typings/
 
 # Yarn Integrity file
 .yarn-integrity
-
-# dotenv environment variables file
-.env
-
-# next.js build output
-.next
