--- a/package.json
+++ b/package.json
@@ -12,31 +12,33 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
-    "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^0.4.0",
+    "compression": "^1.7.4",
+    "polka": "0.5.2",
+    "sirv": "^0.4.2",
     "svelte-observable": "^0.4.0"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "svelte-apollo": "^0.3.0",
-    "graphql": "^14.5.8",
-    "apollo-boost": "^0.4.4",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/runtime": "^7.6.3",
     "@nivo/bump": "^0.59.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
+    "isomorphic-unfetch": "^3.0.0",
+    "now-sapper": "^0.35.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.12.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup": "^1.23.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-svelte": "^5.1.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "sapper": "^0.27.9",
+    "svelte": "^3.12.1",
+    "svelte-apollo": "^0.3.0"
   }
 }
