--- a/package.json
+++ b/package.json
@@ -11,32 +11,38 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "front-matter": "^3.0.2",
+    "glob": "^7.1.6",
+    "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
+    "mz": "^2.7.0",
     "polka": "0.5.2",
     "sirv": "^0.4.2",
     "svelte-observable": "^0.4.0"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.6.4",
+    "@babel/core": "^7.7.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/runtime": "^7.6.3",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/runtime": "^7.7.2",
+    "@rollup/plugin-json": "^4.0.0",
     "apollo-boost": "^0.4.4",
-    "cypress": "^3.4.1",
-    "isomorphic-unfetch": "^3.0.0",
+    "cypress": "^3.6.1",
     "graphql": "^14.5.8",
+    "isomorphic-unfetch": "^3.0.0",
     "now-sapper": "^0.35.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.23.1",
+    "rollup": "^1.26.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.1.0",
+    "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.2",
     "sapper": "^0.27.9",
-    "svelte": "^3.12.1",
+    "svelte": "^3.13.0",
     "svelte-apollo": "^0.3.0"
   },
   "name": "unspecified",
