--- a/site/package.json
+++ b/site/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.3.1",
+    "react-twitch-embed-video": "^2.0.2",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
