--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^2.2.44",
     "gatsby-plugin-google-analytics": "^2.2.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-loadable-components-ssr": "^2.0.0",
     "gatsby-plugin-manifest": "^2.2.48",
     "gatsby-plugin-offline": "^3.0.41",
     "gatsby-plugin-react-helmet": "^3.1.24",
