--- a/package.json
+++ b/package.json
@@ -7,35 +7,37 @@
 		"start": "svelte-kit start"
 	},
 	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^4.0.2",
+		"@fullhuman/postcss-purgecss": "^4.0.3",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
-		"@svitejs/vite-plugin-svelte": "^0.11.0",
+		"@svitejs/vite-plugin-svelte": "^0.11.1",
 		"@tailwindcss/aspect-ratio": "^0.2.0",
-		"@tailwindcss/forms": "^0.2.1",
+		"@tailwindcss/forms": "^0.3.2",
+		"@tailwindcss/jit": "^0.1.18",
+		"@tailwindcss/line-clamp": "^0.2.0",
 		"@tailwindcss/typography": "^0.4.0",
 		"@tailwindcss/ui": "^0.7.2",
 		"autoprefixer": "^10.2.5",
 		"cssnano": "^4.1.10",
-		"eslint": "^7.22.0",
+		"eslint": "^7.23.0",
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.1",
+		"eslint-plugin-jest": "^24.3.3",
 		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-svelte3": "^3.1.2",
-		"postcss": "^8.2.8",
+		"postcss": "^8.2.9",
 		"postcss-cli": "^8.3.1",
 		"postcss-load-config": "^3.0.1",
 		"prettier": "^2.2.1",
 		"prettier-eslint": "^12.0.0",
 		"prettier-eslint-cli": "^5.0.1",
 		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.35.0",
-		"svelte-preprocess": "^4.6.9",
-		"tailwindcss": "^2.0.3",
-		"tailwindcss-font-inter": "^2.0.2",
-		"vite": "^2.1.0"
+		"svelte": "^3.37.0",
+		"svelte-preprocess": "^4.7.0",
+		"tailwindcss": "^2.0.4",
+		"vite": "^2.1.5"
 	},
 	"type": "module",
 	"engines": {
