--- a/package.json
+++ b/package.json
@@ -12,32 +12,32 @@
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@svitejs/vite-plugin-svelte": "^0.11.1",
-		"@tailwindcss/aspect-ratio": "^0.2.0",
-		"@tailwindcss/forms": "^0.3.2",
-		"@tailwindcss/jit": "^0.1.18",
-		"@tailwindcss/line-clamp": "^0.2.0",
-		"@tailwindcss/typography": "^0.4.0",
+		"@tailwindcss/aspect-ratio": "^0.2.1",
+		"@tailwindcss/forms": "^0.3.3",
+		"@tailwindcss/line-clamp": "^0.2.1",
+		"@tailwindcss/typography": "^0.4.1",
 		"@tailwindcss/ui": "^0.7.2",
-		"autoprefixer": "^10.2.5",
-		"cssnano": "^4.1.10",
-		"eslint": "^7.23.0",
+		"autoprefixer": "^10.3.1",
+		"cssnano": "^5.0.7",
+		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.3",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-svelte3": "^3.1.2",
-		"postcss": "^8.2.9",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-jest": "^24.4.0",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-svelte3": "^3.2.0",
+		"mdsvex": "^0.9.8",
+		"postcss": "^8.3.6",
 		"postcss-cli": "^8.3.1",
-		"postcss-load-config": "^3.0.1",
-		"prettier": "^2.2.1",
-		"prettier-eslint": "^12.0.0",
+		"postcss-load-config": "^3.1.0",
+		"prettier": "^2.3.2",
+		"prettier-eslint": "^13.0.0",
 		"prettier-eslint-cli": "^5.0.1",
-		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.37.0",
-		"svelte-preprocess": "^4.7.0",
-		"tailwindcss": "^2.0.4",
-		"vite": "^2.1.5"
+		"prettier-plugin-svelte": "^2.3.1",
+		"svelte": "^3.41.0",
+		"svelte-preprocess": "^4.7.4",
+		"tailwindcss": "^2.2.7",
+		"vite": "^2.4.4"
 	},
 	"type": "module",
 	"engines": {
